Word color change

--- a/project2.html
+++ b/project2.html
@@ -10,7 +10,7 @@
 		 <style>
 		 body {
 			 background-color: orange;
-			 color: black;
+			 color: green;
 		 }
 		 </style>
 		 <script type="text/JavaScript">
