--- a/Project 4/project4.html
+++ b/Project 4/project4.html
@@ -63,7 +63,11 @@
 		 Enter Command
 		 <input type="text" id="txtCommand">
 				
-		
+		 <br>
+		 
+		 <a href="#"><img Src="map.JPG" width="50%" height="25%" title="" alt=""/></a>
+		 
+		 
 		 <br>
 		 
 		 <a href = "mailto:thomas.morse1@marist.edu">My email in case you have any questions</a>
