--- a/project 5/project 5.html
+++ b/project 5/project 5.html
@@ -14,9 +14,9 @@
 		 }
 		 </style>
 		
-		 <script type="text/JavaScript" src="locations2.js"></script>		 
-		 <script type="text/JavaScript" src="extra.js"></script>		 
-		 <script type="text/JavaScript" src="part2.js"></script>
+		 <script type="text/JavaScript" src="locations5.js"></script>		 
+		 <script type="text/JavaScript" src="extra5.js"></script>		 
+		 <script type="text/JavaScript" src="part5.js"></script>
 
 
 
